Fix URL test